--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,13 @@ repositories {
     mavenCentral()
 }
 
+java {
+    withJavadocJar()
+    withSourcesJar()
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+
 dependencies {
     testImplementation 'junit:junit:4.13'
 }
